make sure margins are the same on top and bottom, align credits

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,10 +1,3 @@
-$desktop-padding: 1.875rem;
-$desktop-peek: 8rem;
-$mobile-padding: 1.5rem;
-$mobile-peek: 4.5rem;
-$transition-duration: .3s;
-
-
 @mixin desktop {
   @media screen and (min-width: 768px) {
     @content;
@@ -18,15 +11,17 @@ $transition-duration: .3s;
 }
 
 :root {
-  --transition-duration: #{$transition-duration};
-  --peek: #{$desktop-peek};
-  --padding: #{$desktop-padding};
+  --peek: 8rem;
+  --padding: 1.5rem;
+  --line-height: 4.8rem;
+  --transition-duration: .3s;
 }
 
 @include mobile() {
   :root {
-    --peek: #{$mobile-peek};
-    --padding: #{$mobile-padding};
+    --peek: 4.5rem;
+    --padding: 1.1rem;
+    --line-height: 2.8rem;
   }
 }
 @font-face {
@@ -131,10 +126,10 @@ a, a:visited, a:active, a:focus {
   svg {
     display: block;
     @include desktop() {
-      height: 4.8rem;
+      height: var(--line-height);
     }
     @include mobile() {
-      height: 2.8rem;
+      height: var(--line-height);
     }
   }
   &__inner {
@@ -193,7 +188,7 @@ a, a:visited, a:active, a:focus {
     flex-direction: column;
   }
   &__text {
-    top: calc(var(--padding) - .4rem);
+    top: var(--padding);
   }
   &__media {
     height: 100%;
@@ -242,7 +237,7 @@ a, a:visited, a:active, a:focus {
   }
 
   &__contact {
-    bottom: calc(var(--padding) - .5rem)
+    bottom: var(--padding)
   }
 }
 .credits {
@@ -257,7 +252,7 @@ a, a:visited, a:active, a:focus {
   font-size: .9rem;
   letter-spacing: .15625rem;
   height: var(--peek);
-  bottom: calc(var(--padding));
+  bottom: calc(var(--padding) + (.107 * var(--line-height)));
   position: fixed;
   @include mobile() {
     letter-spacing: 0.125rem;
